changed nav menu
no longer using a pre html5 hack.  we are now fully committed to using
the html5 nav tag.  also moved the nav menu to a javascript file so its
not duplicated.

--- a/githubwebsite/githubwebsite/githubwebsite.csproj
+++ b/githubwebsite/githubwebsite/githubwebsite.csproj
@@ -24,6 +24,7 @@
     <Content Include="food.html" />
     <Content Include="index.html" />
     <Content Include="images\nav_background.png" />
+    <Content Include="nav_menu.js" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
